--- a/public/ang-views/index.html
+++ b/public/ang-views/index.html
@@ -7,9 +7,8 @@
 
   <br><br>
   <div style="font-size: 18pt;margin-top: 55px;" class="row">
-    <div class="col-md-1"></div>
     <div class="col-md-2 landing-info">
-      <h3 style="margin-bottom: 15px;">Kyomi the Fox</h3>
+      <h3 style="margin-bottom: 15px;">Yunah</h3>
       <i class="fa fa-flask"></i>
       <i class="fa fa-medkit"></i>
       <i class="fa fa-crosshairs"></i>
@@ -26,17 +25,22 @@
       <i class="fa fa-crosshairs"></i>
     </div>
     <div class="col-md-2 landing-info">
-      <h3 style="margin-bottom: 15px;">YellowHappy </h3>
+      <h3 style="margin-bottom: 15px;">YellowHappy</h3>
       <i class="fa fa-medkit"></i>
       <i class="fa fa-flask"></i>
       <i class="fa fa-crosshairs"></i>
     </div>
     <div class="col-md-2 landing-info">
-      <h3 style="margin-bottom: 15px;">DJ SojuTIME </h3>
+      <h3 style="margin-bottom: 15px;">DJ SojuTIME</h3>
       <i class="fa fa-medkit"></i>
       <i class="fa fa-arrow-up"></i>
       <i class="fa fa-crosshairs"></i>
     </div>
-    <div class="col-md-1"></div>
+    <div class="col-md-2 landing-info">
+      <h3 style="margin-bottom: 15px;">skguppy</h3>
+      <i class="fa fa-tree"></i>
+      <i class="fa fa-flask"></i>
+      <i class="fa fa-crosshairs"></i>
+    </div>
   </div>
 </center
