--- a/public/ang-views/comfort_picks.html
+++ b/public/ang-views/comfort_picks.html
@@ -14,11 +14,12 @@
 <table class="table" ng-if="picks == 'win'" ng-controller="ComfortWinCtrl">
   <thead>
     <tr>
-      <th class="col-md-2"><h3>Kyomi the Fox</h3></th>
+      <th class="col-md-2"><h3>Yunah</h3></th>
       <th class="col-md-2"><h3>SuitXUp</h3></th>
       <th class="col-md-2"><h3>DJ SojuTIME</h3></th>
       <th class="col-md-2"><h3>SlyDynamo</h3></th>
       <th class="col-md-2"><h3>YellowHappy</h3></th>
+      <th class="col-md-2"><h3>skguppy</h3></th>
     </tr>
   </thead>
   <tbody>
@@ -33,11 +34,12 @@
 <table class="table" ng-if="picks == 'played'" ng-controller="ComfortPlayedCtrl">
   <thead>
     <tr>
-      <th class="col-md-2"><h3>Kyomi the Fox</h3></th>
+      <th class="col-md-2"><h3>Yunah</h3></th>
       <th class="col-md-2"><h3>SuitXUp</h3></th>
       <th class="col-md-2"><h3>DJ SojuTIME</h3></th>
       <th class="col-md-2"><h3>SlyDynamo</h3></th>
       <th class="col-md-2"><h3>YellowHappy</h3></th>
+      <th class="col-md-2"><h3>skguppy</h3></th>
     </tr>
   </thead>
   <tbody>
