--- a/public/ang-views/group_dynamics.html
+++ b/public/ang-views/group_dynamics.html
@@ -28,12 +28,12 @@
 <table class="table group-dynamics" style="margin-top: 100px;">
   <thead>
     <tr>
-      <th class="col-md-2"><h3>Yunah</h3></th>
+      <th class="col-md-2"><h3>skPrismo</h3></th>
       <th class="col-md-2"><h3>SuitXUp</h3></th>
-      <th class="col-md-2"><h3>DJ SojuTIME</h3></th>
+      <th class="col-md-2"><h3>skBMO</h3></th>
       <th class="col-md-2"><h3>SlyDynamo</h3></th>
       <th class="col-md-2"><h3>YellowHappy</h3></th>
-      <th class="col-md-2"><h3>skguppy</h3></th>
+      <th class="col-md-2"><h3>skSkycon</h3></th>
     </tr>
   </thead>
   <tbody>
