--- a/public/ang-views/index.html
+++ b/public/ang-views/index.html
@@ -2,21 +2,22 @@
 
 <center>
   <img ng-src="/images/other/current_tier.png" id="tier-logo">
-  <h2 style="font-size:44pt;">Welcome to serious BIZ</h2>
-  <h2 style="font-size:32pt; color: #777;"><em>our Journey to Challenger starts here</em></h2>
+  <h2 style="font-size:44pt;">Welcome to Teams.GG</h2>
+  <h2 style="font-size:32pt; color: #777;"><em>suggested team comps for your Ranked 5s team</em></h2>
 
   <br><br>
   <div style="font-size: 18pt;margin-top: 55px;" class="row">
     <div class="col-md-2 landing-info">
-      <h3 style="margin-bottom: 15px;">Yunah</h3>
-      <i class="fa fa-flask"></i>
+      <h3 style="margin-bottom: 15px;">skPrismo</h3>
+      <i class="fa fa-tree"></i>
       <i class="fa fa-medkit"></i>
-      <i class="fa fa-crosshairs"></i>
+      <i class="fa fa-flask"></i>
     </div>
     <div class="col-md-2 landing-info">
       <h3 style="margin-bottom: 15px;">SuitXUp</h3>
-      <i class="fa fa-arrow-up"></i>
+      <i class="fa fa-crosshairs"></i>
       <i class="fa fa-tree"></i>
+      <i class="fa fa-flask"></i>
     </div>
     <div class="col-md-2 landing-info">
       <h3 style="margin-bottom: 15px;">SlyDynamo</h3>
@@ -31,16 +32,16 @@
       <i class="fa fa-crosshairs"></i>
     </div>
     <div class="col-md-2 landing-info">
-      <h3 style="margin-bottom: 15px;">DJ SojuTIME</h3>
-      <i class="fa fa-medkit"></i>
+      <h3 style="margin-bottom: 15px;">skBMO</h3>
       <i class="fa fa-arrow-up"></i>
-      <i class="fa fa-crosshairs"></i>
+      <i class="fa fa-medkit"></i>
+      <i class="fa fa-tree"></i>
     </div>
     <div class="col-md-2 landing-info">
-      <h3 style="margin-bottom: 15px;">skguppy</h3>
+      <h3 style="margin-bottom: 15px;">skSkycon</h3>
+      <i class="fa fa-crosshairs"></i>
       <i class="fa fa-tree"></i>
       <i class="fa fa-flask"></i>
-      <i class="fa fa-crosshairs"></i>
     </div>
   </div>
 </center
