--- a/public/ang-views/index.html
+++ b/public/ang-views/index.html
@@ -2,7 +2,7 @@
 
 <center>
   <img ng-src="/images/other/current_tier.png" id="tier-logo">
-  <h2 style="font-size:44pt;">Welcome to Teams.GG</h2>
+  <h2 style="font-size:44pt;">Welcome to Team.GG</h2>
   <h2 style="font-size:32pt; color: #777;"><em>suggested team comps for your Ranked 5s team</em></h2>
 
   <br><br>
